--- a/kmre-manager/PKGBUILD
+++ b/kmre-manager/PKGBUILD
@@ -8,6 +8,7 @@ license=('GPL3')
 url='https://www.ubuntukylin.com/index.php'
 provides=("$pkgname")
 groups=(kmre)
+depends=('boost-libs')
 source=(${pkgname}-${pkgver}-${arch}.deb::http://archive.ubuntukylin.com/ubuntukylin/pool/partner/kylin-kmre-manager_${pkgver}_amd64.deb
 'protocolbuff-3.6.1.deb::http://ftp.br.debian.org/debian/pool/main/p/protobuf/libprotobuf17_3.6.1.3-2_amd64.deb'
 )
@@ -27,5 +28,9 @@ package(){
     
     mv ${pkgdir}/usr/lib/${arch}-linux-gnu/* ${pkgdir}/usr/lib/
     rm -rf ${pkgdir}/usr/lib/${arch}-linux-gnu/
+    ln -s /usr/lib/libboost_filesystem.so ${pkgdir}/usr/lib/libboost_filesystem.so.1.71.0
+    ln -s /usr/lib/libboost_log.so ${pkgdir}/usr/lib/libboost_log.so.1.71.0
+    ln -s /usr/lib/libboost_thread.so ${pkgdir}/usr/lib/libboost_thread.so.1.71.0
+    
     
 }
