build packges from source

--- a/kmre-daemon/PKGBUILD
+++ b/kmre-daemon/PKGBUILD
@@ -5,33 +5,49 @@ pkgrel=1
 groups=(kmre)
 pkgdesc='Ubuntu Kylin KMRE, an android container.'
 arch=('x86_64')
-license=('GPL3')
-url='https://www.ubuntukylin.com/index.php'
-provides=("$pkgname")
-depends=('dbus-c++')
-makedepends=('cmake')
-source=(${pkgname}-${pkgver}-${arch}.deb::http://archive.ubuntukylin.com/ubuntukylin/pool/partner/kylin-kmre-daemon_${pkgver}_amd64.deb
-'jsoncpp-1.7.4.tar.gz::https://github.com/open-source-parsers/jsoncpp/archive/refs/tags/1.7.4.tar.gz'
+license=('GPL-3.0-only')
+url='https://gitee.com/openkylin/kylin-kmre-daemon'
+depends=(
+    dbus-c++
+    fuse{2,3}
+    glibmm
+    jsoncpp
+    openssl
 )
-sha512sums=('e8018aac11e322ec14de06458999637aca40ee4c4b0bca24e29ad193585b8d6fd277f0e9e69fa10e5c9dc8a943e9ae861da17b965df345494c39859d7ca8b932'
-            'e674f6f885e2aa7258d3d3d7a14ef148b5182fd883a527b3b9d75334e778142a833bbb295796af503573b9745f889b8bc496a0b2e11dce1b9cc7f079ac538bf7')
-    
+makedepends=(
+    cmake
+    git lsb-release
+    ninja
 
-build(){
-    cd $srcdir/jsoncpp-1.7.4
-    mkdir -p build/debug
-    cd build/debug
-    cmake -DCMAKE_BUILD_TYPE=release -DBUILD_STATIC_LIBS=OFF -DBUILD_SHARED_LIBS=ON -DARCHIVE_INSTALL_DIR=. -G "Unix Makefiles" ../..\
-    -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBDIR=lib
-    
+)
+source=(git+https://gitee.com/openkylin/kylin-kmre-daemon.git)
+sha512sums=('SKIP')
+
+prepare() {
+    cd ${srcdir}/kylin-${pkgname}
+    sed -i CMakeLists.txt \
+        -e 's|g++-9|g++|' \
+        -e 's| /lib| /usr/lib|g'
+    sed -i 's|<jsoncpp/json/json.h>|<json/json.h>|g' src/container/image-info.h
+    sed -i '30a #include <cstdint> ' src/utils.h
+
 }
-package(){
-    cd $srcdir
-    tar xpf data.tar.xz -C ${pkgdir}
-    mv ${pkgdir}/lib  ${pkgdir}/usr
-    cd  $srcdir/jsoncpp-1.7.4/build/debug
-    make install DESTDIR="${pkgdir}"
-    cd ${pkgdir}/usr
-    rm -rf {include,lib/pkgconfig,lib/libjsoncpp.so}
-    
+build() {
+    local cmake_args=(
+        -G Ninja
+        -DCMAKE_INSTALL_PREFIX=/usr
+        -DCMAKE_INSTALL_SYSCONFDIR=/etc
+        -DCMAKE_INSTALL_LIBDIR=/usr/lib
+        -DCMAKE_BUILD_TYPE=None
+        -DCMAKE_CXX_COMPILER=g++
+    )
+    cd ${srcdir}/
+    install -d build
+    cmake -S kylin-${pkgname} -B build "${cmake_args[@]}"
+    ninja -C build
+}
+
+package() {
+    cd ${srcdir}/build
+    DESTDIR="$pkgdir" ninja install
 }
