--- a/kylin-kmre-display-control/PKGBUILD
+++ b/kylin-kmre-display-control/PKGBUILD
@@ -1,26 +1,26 @@
 # Maintainer: sukanka <su975853527@gmail.com>
-pkgname=kmre-display-control
+pkgname=kylin-kmre-display-control
 pkgrel=1
-pkgver=1.4.6
-pkgdesc='Ubuntu Kylin KMRE, an android container.'
+pkgver=3.9.6
+pkgdesc='display control libraries for kmre'
 arch=('x86_64')
+groups=(kylin-kmre)
 license=('GPL-2.0-only')
 url='https://gitee.com/openkylin/kylin-kmre-display-control'
-groups=(kmre)
+makedepends=(cmake git lsb-release ninja python)
 source=(git+${url}.git)
 sha512sums=('SKIP')
-makedepends=(
-    cmake
-    git lsb-release
-    ninja
-    python
-)
+
+pkgver() {
+    cat ${srcdir}/${pkgname}/debian/control | grep Standards-Version | cut -d : -f2 | tr -d ' '
+}
+
 prepare() {
-    cd ${srcdir}/kylin-${pkgname}
+    cd ${srcdir}/${pkgname}
     sed -i host/display-control/display_control.c \
         -e '30a #include "utils/debug.h"'
-
 }
+
 build() {
     local cmake_args=(
         -G Ninja
@@ -30,13 +30,14 @@ build() {
     )
     cd ${srcdir}/
     install -d build
-    cmake -S kylin-${pkgname} -B build "${cmake_args[@]}"
+    cmake -S ${pkgname} -B build "${cmake_args[@]}"
     ninja -C build
 }
 
 package() {
     cd ${srcdir}/build
     DESTDIR="$pkgdir" ninja install
-    cd ${srcdir}/kylin-${pkgname}/host
-    cp -rf include ${pkgdir}/usr
+    cd ${srcdir}/${pkgname}/host/include
+    install -Dm644 {lib,}DisplayControl/*.h -t ${pkgdir}/usr/include/DisplayControl
+
 }
